# sutra

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES.md  app.html  index.html  netlify.toml  package-lock.json  package.json  vercel.json  vite.config.ts
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  publish-engine.yml  release.yml
engine/: README.md  SECURITY-REVIEW.md  SECURITY.md  SIDECAR.md  tsconfig.json
engine/evals/: run-benchmark-task2.ts  run-benchmark.ts
engine/evals/fixtures/: makeToyRepo.ts
engine/evals/tasks/: hostileRepo.ts  task1AddGuardClause.test.ts  task2FixAverage.ts  (+1 more)
engine/scripts/: build-npm.mjs  build-sidecar.mjs  run-tests.mjs
engine/src/: cli.ts  cliArgs.test.ts  cliArgs.ts  version.ts
public/: _headers
src/: App.tsx  index.css  scenario.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tests/: sidecar_handshake.rs
src/components/: AppBackdrop.tsx  BlastMap.tsx  Boundary.tsx  CodeSurface.tsx  Conductor.tsx  ConflictCallout.tsx  ConsoleDock.tsx  ContextDrawer.tsx  LoopOrbit.tsx  LoopTimeline.tsx  ThemeSwitcher.tsx  TopChrome.tsx  WasmVerify.tsx  ui.tsx
src/contracts/: README.md  agent.ts  index.ts  llm.ts  registry.ts  simulated.ts
src/desktop/: Onboarding.tsx  engine.ts  localEngine.ts  realLoop.ts
src/loop/: script.ts  types.ts  useLoop.ts  useRealLoop.ts
src/sim/: script.ts  types.ts  useSimulation.ts
src/site/: HeroOrbit.tsx  LiveWasmDemo.tsx  SiteApp.tsx  bits.tsx  content.ts  main.tsx
src/views/: ConnectMachine.tsx  IntentView.tsx  LoopDesignView.tsx  LoopRunView.tsx  MergeView.tsx  RealLaunchPanel.tsx  RealLauncher.tsx  RealLoopRunView.tsx  RealMergeView.tsx  RealReviewView.tsx  RealSpecView.tsx  ReviewView.tsx  SpecView.tsx  TasksView.tsx
src/wasm/: verify.ts
(+44 files in other folders)
